# Sauron-api

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  openapi.yaml
cpp-sdk/: CMakeLists.txt  README.md
cpp-sdk/cmake/: sauron-sdk-config.cmake.in
cpp-sdk/include/sauron/: Sauron.hpp
cpp-sdk/include/sauron/client/: HttpClient.hpp  SauronClient.hpp
cpp-sdk/include/sauron/dto/: AIAlgorithmResponse.hpp  AIProvider.hpp  AIQueryRequest.hpp  AIQueryResponse.hpp  BaseDTO.hpp  DTOs.hpp  Error.hpp  HealthResponse.hpp  LoginRequest.hpp  TokenResponse.hpp
cpp-sdk/src/: SauronClient.cpp
cpp-sdk/src/sauron/client/: SauronClient.cpp
